crates/hexeract-macros/tests/ui/fail_ctx_wrong_type.stderr
error: the second argument must be `ctx: &HandlerContext`
 --> tests/ui/fail_ctx_wrong_type.rs:9:43
  |
9 |     async fn handle(&self, cmd: Cmd, ctx: u32) -> Result<(), std::convert::Infallible> {
  |                                           ^^^
